--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "homepage": "https://tamnguyenthien.github.io/layoutalg/",
-  "name": "layout-alg",
+  "homepage": "https://tamnguyenthien.github.io/cinamon/",
+  "name": "cinamon",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
